src/strucvars/data/clingen_dosage/snapshots/scarus__strucvars__data__clingen_dosage__io__test__load_clingen_genes_file_grch37.snap
---
source: src/strucvars/data/clingen_dosage/io.rs
expression: "&genes[0..5]"
---
- gene_symbol: A4GALT
  ncbi_gene_id: "53947"
  genomic_location: "22:43088121-43117307"
  haploinsufficiency_score: 30
  triplosensitivity_score: 0
  haploinsufficiency_disease_id: ~
  triplosensitivity_disease_id: ~
- gene_symbol: AAGAB
  ncbi_gene_id: "79719"
  genomic_location: "15:67493013-67547536"
  haploinsufficiency_score: 3
  triplosensitivity_score: 0
  haploinsufficiency_disease_id: "MONDO:0007858"
  triplosensitivity_disease_id: ~
- gene_symbol: AARS1
  ncbi_gene_id: "16"
  genomic_location: "16:70286297-70323412"
  haploinsufficiency_score: 0
  triplosensitivity_score: 0
  haploinsufficiency_disease_id: ~
  triplosensitivity_disease_id: ~
- gene_symbol: AARS2
  ncbi_gene_id: "57505"
  genomic_location: "6:44266463-44281063"
  haploinsufficiency_score: 30
  triplosensitivity_score: ~
  haploinsufficiency_disease_id: "MONDO:0014387"
  triplosensitivity_disease_id: ~
- gene_symbol: AASS
  ncbi_gene_id: "10157"
  genomic_location: "7:121713598-121784344"
  haploinsufficiency_score: 30
  triplosensitivity_score: ~
  haploinsufficiency_disease_id: "MONDO:0009388"
  triplosensitivity_disease_id: ~

