src/strucvars/data/clingen_dosage/snapshots/scarus__strucvars__data__clingen_dosage__io__test__load_clingen_regions_file_grch38.snap
---
source: src/strucvars/data/clingen_dosage/io.rs
expression: "&regions[0..5]"
---
- isca_id: ISCA-46748
  isca_region_name: 19p13.3 Critical Region 1 (CR1)
  genomic_location: tbd
  haploinsufficiency_score: 0
  triplosensitivity_score: 1
  haploinsufficiency_disease_id: ~
  triplosensitivity_disease_id: "MONDO:0100038"
- isca_id: ISCA-46747
  isca_region_name: "22q11.2 recurrent region (distal type III, E/F-H) (includes SMARCB1)"
  genomic_location: "chr22:22776925-24598466"
  haploinsufficiency_score: 3
  triplosensitivity_score: 1
  haploinsufficiency_disease_id: ~
  triplosensitivity_disease_id: ~
- isca_id: ISCA-46743
  isca_region_name: Xq25 region (includes STAG2)
  genomic_location: "chrX:123900469-124102669"
  haploinsufficiency_score: 3
  triplosensitivity_score: 3
  haploinsufficiency_disease_id: ~
  triplosensitivity_disease_id: "MONDO:0100038"
- isca_id: ISCA-46742
  isca_region_name: 7p22.1 region (includes ACTB)
  genomic_location: "chr7:5497217-5760091"
  haploinsufficiency_score: 3
  triplosensitivity_score: 1
  haploinsufficiency_disease_id: "MONDO:0000508"
  triplosensitivity_disease_id: "MONDO:0100038"
- isca_id: ISCA-46741
  isca_region_name: 9p24.3 Region (includes DMRT1)
  genomic_location: "chr9:883300-918342"
  haploinsufficiency_score: 2
  triplosensitivity_score: ~
  haploinsufficiency_disease_id: "MONDO:0002145"
  triplosensitivity_disease_id: ~

